# brave-search-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/: brave.py  client.py  main.py  server.py
